# transcriber

./: .gitignore  AGENTS.md  LICENSE  NOTES.md  README.md  _gh.code-workspace  config.yaml  pyproject.toml
app/: __init__.py  config.py  logging.py  main.py  middleware.py  models.py
app/api/: transcriptions.py
app/services/: mlx_whisper.py  transcription.py  transcription_router.py  vibevoice_asr.py  vibevoice_inference.py
app/static/: app.js  index.html  styles.css
tests/: conftest.py  stubs.py  test_config.py  test_main.py  test_project_metadata.py
tests/api/: test_transcriptions.py  test_upload_limits.py
tests/services/: test_mlx_whisper.py  test_transcription_router.py  test_vibevoice_asr.py
vibevoice/: __init__.py
vibevoice/modular/: __init__.py  modular_vibevoice_text_tokenizer.py
vibevoice/processor/: __init__.py  vibevoice_asr_processor.py  vibevoice_processor.py  vibevoice_streaming_processor.py
vibevoice/schedule/: dpm_solver.py
