[project]
name = "transcriber"
version = "0.1.0"
description = "Local browser-based transcription app for Apple Silicon Macs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "mlx-whisper>=0.4.1",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.27",
    "pyyaml>=6.0.2",
    "uvicorn[standard]>=0.30.6",
    "vibevoice",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.9",
]

[tool.uv]
exclude-newer = "7 days"

[tool.uv.sources]
vibevoice = { path = "../../_ GitHub generell/VibeVoice", editable = true }

[tool.pytest.ini_options]
pythonpath = ["."]
