[project]
name = "transcriber"
version = "0.1.0"
description = "Local browser-based transcription app for Apple Silicon Macs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "fastapi>=0.115.0",
    "librosa>=0.11.0",
    "mlx-whisper>=0.4.1",
    "numpy>=2.4.6",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.27",
    "pyyaml>=6.0.2",
    "soundfile>=0.13.1",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=4.51.3,<5.0.0",
    "uvicorn[standard]>=0.30.6",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.9",
]

[tool.uv]
exclude-newer = "7 days"

[tool.ruff]
exclude = ["vibevoice"]

[tool.pytest.ini_options]
pythonpath = ["."]
